added api documentation, changed variable names
