# server/common/api.yml
@@ -305,6 +305,36 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /admin/users/addAdmin:
+    post:
+      tags:
+        - Admin
+      servers:
+        - url: /
+      description: Admins to add another admin
+      security:
+        - Bearer: []
+      requestBody:
+        description: user ID
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddAdmin'
+        required: true
+      responses:
+        200:
+          description: Return success message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        400:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /admin/notifications:
     post:
       tags:
@@ -927,3 +957,12 @@ components:
         dp:
           type: string
           description: Base64 encoded data URL of the image
+
+    AddAdmin:
+      type: object
+      required:
+        - userId
+      properties:
+        userId:
+          type: string
+          example: 2020IMG016
